modified one sentence

--- a/LatexManuscript/MBE/legacy.tex
+++ b/LatexManuscript/MBE/legacy.tex
@@ -317,7 +317,7 @@ A report comparing the Genome Analyzer II (GAII) to the Illumina HiSeq found tha
 Differences in read quality and error profiles in turn require different calling pipelines.
 
 An enrichment in mutational profiles in one chromosome (Figure \ref{CountPerChrom}B) is difficult to explain through biological mechanisms or sequencing technology as neither are expected to produce systematic differences across chromosomes. 
-Issues arising from subtle differences in how these data were integrated or processed are one explanation that would be consistent with this as chromosomes are commonly treated and analyzed separately.
+Subtle differences in how these data were integrated or processed could explain such differences, as chromosomes are commonly treated and analyzed separately. 
 However, to pinpoint the precise technical source of the discrepancy would require further forensic inquiries into the details of the heterogeneous sample preparation, combination of sequencing technologies and data processing pipelines used throughout the 1kGP. 
 Given the progress in sequencing and calling that occurred since the early phases of the 1kGP (Figure \ref{MapQual}), it is likely that the source of these biases is not longer being actively introduced in recent sequence data.
 
