--- a/LatexManuscript/MBE/legacy.tex
+++ b/LatexManuscript/MBE/legacy.tex
@@ -8,6 +8,7 @@
 \usepackage{subcaption}
 \usepackage{hyperref}
 %\usepackage{ulem}
+\usepackage{textcomp}
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -316,15 +317,15 @@ Different sequencing technologies will have different error profiles.
 A report comparing the Genome Analyzer II (GAII) to the Illumina HiSeq found that the GAII had much higher rates of reads below a quality score of 30 \citep{Minoche2011} with, for instance, different patterns of quality decrease along reads. 
 Differences in read quality and error profiles in turn require different calling pipelines.
 
-An enrichment in mutational profiles in one chromosome (Figure \ref{CountPerChrom}B) is difficult to explain through biological mechanisms or sequencing technology as neither are expected to produce systematic differences across chromosomes. 
-Subtle differences in how these data were integrated or processed could explain such differences, as chromosomes are commonly treated and analyzed separately. 
+An enrichment in mutational profiles in one chromosome (Figure \ref{CountPerChrom}B) is difficult to explain through biological mechanisms or sequencing technology as neither are expected to produce systematic biases across chromosomes. 
+Subtle differences in how these data were integrated or processed could explain such biases, as chromosomes are commonly treated and analyzed separately. 
 However, to pinpoint the precise technical source of the discrepancy would require further forensic inquiries into the details of the heterogeneous sample preparation, combination of sequencing technologies and data processing pipelines used throughout the 1kGP. 
 Given the progress in sequencing and calling that occurred since the early phases of the 1kGP (Figure \ref{MapQual}), it is likely that the source of these biases is not longer being actively introduced in recent sequence data.
 
 However, because the 1kGP data is widely used as a reference database, these variants are still being imputed onto new genotype data and can then impact association studies for a variety of phenotypes. 
 Even though significant association of a variant with a quality metric is not in itself an indication that the variant is spurious, we would recommend to carefully examine GWAS associations for such variants, e.g. by repeating the analysis without the 1kGP as part of the imputation panel. 
 
-For analyses where individual variants cannot be examined individually (mutation profiles, distributions of allele frequencies, polygenic risk scores), we would recommend to simply discard the individuals with $Q<30$ and to filter out the LD-associated variants identified by \cite{mafessoni2018turning} and the $Q$-associated variants we identified (lists of such variants and sample IDs are provided in the Supplementary Data). We also recommend that imputation servers discard individuals with low $Q$ (or at least provide the option of performing the imputation without). Given the value of freely accessible data, resequencing individuals with low Q would  also likely be a worthwhile investment for the community. 
+For analyses where individual variants cannot be examined individually (mutation profiles, distributions of allele frequencies, polygenic risk scores), we would recommend to simply discard the individuals with $Q<30$ and to filter out the LD-associated variants identified by \cite{mafessoni2018turning} and the $Q$-associated variants we identified (lists of such variants and sample IDs are provided in the Supplementary Data). We also recommend that imputation servers discard individuals with low $Q$ (or at least provide the option of performing the imputation without). Given the value of freely accessible data, resequencing individuals with low $Q$ would  also likely be a worthwhile investment for the community. 
 
 \section{Conclusion}
 
